--- a/template/default/index.html
+++ b/template/default/index.html
@@ -51,8 +51,8 @@
                                                     <h4><i class="icon-arrow-right"></i>{$v['title']}</h4>
                                                     <h2>{$v['bannerzhuti']}</h2>
                                                     <p>{$v['bannermiaoshu']}</p>
-                                                    <a href="{$v['bannerlink']}" class="btn btn-primary btn-large">查看更多...</a>
-												</div>
+<!--                                                     <a href="{$v['bannerlink']}" class="btn btn-primary btn-large">查看更多...</a>
+ -->												</div>
                                             </div>
                                             {/loop}
 
@@ -106,7 +106,7 @@
                                     <div class="spacer"> </div>
 
                                     <!-- Services Section Starts -->
-                                    <div class="row">
+                                    <!-- <div class="row">
                                         <div class="span4">
                                             <div class="service-box color-1 extra-btn">
                                                 <figure class="icon"><i class="icon-leaf"></i></figure>
@@ -137,7 +137,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!-- Services Section Ends -->
 
 									<!-- Clients Section Starts -->
@@ -147,13 +147,14 @@
                                                 <h2>户型视频</h2>
                                                 <ul class="posts-grid row-fluid unstyled latest_projects">
                                                     <!-- Image Format -->
-                                          {loop table="article" tid="3" limit="4"}
+                                        {loop table="article" molds="article" tid="3" limit="3" as="v"}
                                                     <li>
                                                                     <h5>{fun newstr($v['title'],35)}</h5>
-<!--                                                                     <figure class="featured-thumbnail thumbnail"><img src="{$GLOBALS['S']['jwcdnapi']}{$v['litpic']}" alt="{$v['title']}" /></figure>
- -->  
- <video width=100% height=40% controls="controls" autoplay="autoplay">
-  <source src="/uploads/2016/12/210858599703.mp4" type="video/mp4" />
+                                                                    <figure class="featured-thumbnail thumbnail">{$v['body']}</figure>
+                                                                    <!-- <a href="{$v['url']}" class="btn btn-primary" title="查看更多...">查看更多...</a> -->
+  
+ <!-- <video width=100% height=40% controls="controls" autoplay="autoplay">
+  <source src="/uploads/2016/12/210858599703.mp4" type="video/mp4" /> -->
  <!--  <object data="/uploads/2016/12/210858599703.mp4" width=100% height=40%>
     <embed width=100% height=40% src="/uploads/2016/12/210858599703.mp4" />
   </object> -->
